[package]
name = "dos"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gmt-controllers = { path="../gmt-controllers" }
fem = { path="../fem" }
serde-pickle = "0.6.2"
nalgebra = "0.24.1"
anyhow = "1.0.38"
serde = { version = "1.0.123", features = ["derive"] }
